--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Matrix Operations Calculator</h1>
     <form id="matrix-form">
+        <!-- Hidden input field for operation parameter -->
+        <input type="hidden" name="operation" value="add">
         <!-- Select operation -->
         <label for="operation">Select operation:</label>
         <select id="operation" name="operation">
